@@ -1,12 +1,25 @@
 // Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.platform.execution.dashboard;
 
-import com.intellij.execution.*;
+import com.intellij.execution.ExecutionListener;
+import com.intellij.execution.ExecutionManager;
+import com.intellij.execution.RunContentDescriptorId;
+import com.intellij.execution.RunContentDescriptorIdImpl;
+import com.intellij.execution.RunManager;
+import com.intellij.execution.RunManagerListener;
+import com.intellij.execution.RunnerAndConfigurationSettings;
 import com.intellij.execution.configurations.ConfigurationType;
 import com.intellij.execution.configurations.ConfigurationTypeUtil;
 import com.intellij.execution.configurations.RunConfiguration;
 import com.intellij.execution.configurations.RunProfile;
-import com.intellij.execution.dashboard.*;
+import com.intellij.execution.dashboard.RunDashboardCustomizer;
+import com.intellij.execution.dashboard.RunDashboardDefaultTypesProvider;
+import com.intellij.execution.dashboard.RunDashboardListener;
+import com.intellij.execution.dashboard.RunDashboardManager;
+import com.intellij.execution.dashboard.RunDashboardRunConfigurationStatus;
+import com.intellij.execution.dashboard.RunDashboardService;
+import com.intellij.execution.dashboard.RunDashboardServiceId;
+import com.intellij.execution.dashboard.RunDashboardServiceIdType;
 import com.intellij.execution.impl.ExecutionManagerImpl;
 import com.intellij.execution.impl.RunManagerImpl;
 import com.intellij.execution.impl.RunnerAndConfigurationSettingsImpl;
@@ -15,7 +28,11 @@ import com.intellij.execution.runners.ExecutionEnvironment;
 import com.intellij.execution.ui.RunContentDescriptor;
 import com.intellij.execution.ui.RunContentManagerImpl;
 import com.intellij.openapi.application.ApplicationManager;
-import com.intellij.openapi.components.*;
+import com.intellij.openapi.components.PersistentStateComponent;
+import com.intellij.openapi.components.Service;
+import com.intellij.openapi.components.State;
+import com.intellij.openapi.components.Storage;
+import com.intellij.openapi.components.StoragePathMacros;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.ExtensionPointListener;
 import com.intellij.openapi.extensions.ExtensionPointName;
@@ -25,6 +42,7 @@ import com.intellij.openapi.project.Project;
 import com.intellij.openapi.project.ProjectManager;
 import com.intellij.openapi.util.Comparing;
 import com.intellij.openapi.util.Condition;
+import com.intellij.platform.execution.dashboard.splitApi.NavigateToServiceEvent;
 import com.intellij.platform.execution.dashboard.splitApi.RunDashboardServiceDto;
 import com.intellij.platform.execution.dashboard.splitApi.RunDashboardSettingsDto;
 import com.intellij.platform.execution.dashboard.splitApi.ServiceCustomizationDto;
@@ -40,7 +58,14 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.annotations.Unmodifiable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
@@ -82,6 +107,11 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
   }
 
   @Override
+  public boolean isInitialized() {
+    return true;
+  }
+
+  @Override
   public void updateServiceRunContentDescriptor(@NotNull Content contentWithNewDescriptor, @NotNull RunContentDescriptor oldDescriptor) {
     RunContentDescriptorId oldDescriptorId = oldDescriptor.getId();
     if (oldDescriptorId == null) return;
@@ -89,11 +119,19 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     var newDescriptor = RunContentManagerImpl.getRunContentDescriptorByContent(contentWithNewDescriptor);
 
     var newContentId = newDescriptor == null ? null : newDescriptor.getId();
-    if (newContentId instanceof  RunContentDescriptorIdImpl newContentIdImpl) {
+    if (newContentId instanceof RunContentDescriptorIdImpl newContentIdImpl) {
       updateServiceRunContentDescriptor(oldDescriptorId, newContentIdImpl);
     }
 
     RunDashboardUiManagerImpl.getInstance(myProject).getDashboardContentManager().addContent(contentWithNewDescriptor);
+  }
+
+  @Override
+  public void navigateToServiceOnRun(@NotNull RunContentDescriptorId descriptorId, Boolean focus) {
+    RunDashboardService service = findService(descriptorId);
+    if (service == null) return;
+
+    mySharedState.fireNavigateToServiceEvent(service.getUuid(), focus);
   }
 
   @SuppressWarnings({"unchecked", "rawtypes"})
@@ -148,9 +186,11 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     if (!myListenersInitialized.compareAndSet(false, true)) return;
 
     MessageBusConnection connection = myProject.getMessageBus().connect(myProject);
-    // todo backend updates
     connection.subscribe(RunManagerListener.TOPIC, new RunManagerListener() {
-      private volatile boolean myUpdateStarted;
+      private final BackendRunDashboardUpdatesQueue synchronizationScheduler
+        = new BackendRunDashboardUpdatesQueue(
+        RunDashboardCoroutineScopeProvider.getInstance(myProject).createChildNamedScope("Backend run manager listener sync requests"),
+        OverlappingTasksStrategy.SKIP_NEW);
 
       @Override
       public void runConfigurationAdded(@NotNull RunnerAndConfigurationSettings settings) {
@@ -158,10 +198,10 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
           // Always include newly added temporary configurations.
           myShownConfigurations.add(settings.getConfiguration());
         }
-        if (!myUpdateStarted) {
+        synchronizationScheduler.submit(() -> {
           syncConfigurations();
           updateDashboardIfNeeded(settings);
-        }
+        });
       }
 
       @Override
@@ -170,29 +210,33 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
         myHiddenConfigurations.remove(configuration);
         myShownConfigurations.remove(configuration);
         myConfigurationStatuses.remove(configuration);
-        if (!myUpdateStarted) {
+        synchronizationScheduler.submit(() -> {
           syncConfigurations();
           updateDashboardIfNeeded(settings);
-        }
+        });
       }
 
       @Override
       public void runConfigurationChanged(@NotNull RunnerAndConfigurationSettings settings) {
-        if (!myUpdateStarted) {
-          updateDashboardIfNeeded(settings);
-        }
+        synchronizationScheduler.submit(() -> {
+          RunConfiguration configuration = settings.getConfiguration();
+          if (isShowInDashboard(configuration) ||
+              !filterByContent(getConfigurationDescriptors(configuration)).isEmpty()) {
+            mySharedState.setServices(getRunConfigurations());
+            updateDashboard(true);
+          }
+        });
       }
 
       @Override
-      public void beginUpdate() {
-        myUpdateStarted = true;
-      }
+      public void beginUpdate() { }
 
       @Override
       public void endUpdate() {
-        myUpdateStarted = false;
-        syncConfigurations();
-        updateDashboard(true);
+        synchronizationScheduler.submit(() -> {
+          syncConfigurations();
+          updateDashboard(true);
+        });
       }
     });
     connection.subscribe(ExecutionManager.EXECUTION_TOPIC, new ExecutionListener() {
@@ -240,7 +284,8 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     }
 
     Logger.getInstance(RunDashboardManagerImpl.class)
-      .warn("findServiceById failed to discover backend run dashboard service in global storage, falling back to manually managed collection");
+      .warn(
+        "findServiceById failed to discover backend run dashboard service in global storage, falling back to manually managed collection");
     return ContainerUtil.find(getRunConfigurations(), service -> service.getUuid().equals(id));
   }
 
@@ -276,6 +321,10 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
 
   public Flow<Set<String>> getConfigurationTypes() {
     return mySharedState.getConfigurationTypes();
+  }
+
+  public Flow<NavigateToServiceEvent> getNavigateToServiceEvents() {
+    return mySharedState.getNavigateToServiceEvents();
   }
 
   public void runCallbackForLink(@NotNull String link, @NotNull RunDashboardServiceId serviceId) {
@@ -381,7 +430,7 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
   }
 
   @Override
-  public void hideConfigurations(Collection<? extends RunConfiguration> configurations) {
+  public void hideConfigurations(@NotNull Collection<? extends RunConfiguration> configurations) {
     for (RunConfiguration configuration : configurations) {
       if (myState.excludedNewTypes.contains(configuration.getType().getId())) {
         myShownConfigurations.remove(configuration);
@@ -521,8 +570,10 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
         result.add(syncedServices);
       }
       for (List<RunDashboardService> oldServices : myServices) {
-        RunDashboardService oldService = oldServices.get(0);
-        if (oldService.getDescriptorId() != null && !settingsList.contains(oldService.getConfigurationSettings())) {
+        RunDashboardService oldService = oldServices.getFirst();
+        RunContentDescriptorId descriptorId = oldService.getDescriptorId();
+        RunContentDescriptor descriptor = descriptorId == null ? null : getDescriptorById(descriptorId, myProject);
+        if (descriptor != null && !settingsList.contains(oldService.getConfigurationSettings())) {
           if (!updateServiceSettings(myProject, result, oldServices)) {
             result.add(oldServices);
           }
@@ -532,8 +583,8 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     }
     finally {
       myServiceLock.writeLock().unlock();
-      mySharedState.setServices(myServices);
-      mySharedState.setConfigurationTypes(myState.configurationTypes);
+      mySharedState.setConfigurationTypes(new HashSet<>(myState.configurationTypes));
+      mySharedState.setServices(getRunConfigurations());
     }
   }
 
@@ -553,7 +604,7 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     }
     finally {
       myServiceLock.writeLock().unlock();
-      mySharedState.setServices(myServices);
+      mySharedState.setServices(getRunConfigurations());
       updateDashboard(true);
     }
   }
@@ -568,7 +619,7 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     }
     finally {
       myServiceLock.writeLock().unlock();
-      mySharedState.setServices(myServices);
+      mySharedState.setServices(getRunConfigurations());
       updateDashboard(true);
     }
   }
@@ -583,13 +634,13 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
     }
     finally {
       myServiceLock.writeLock().unlock();
-      mySharedState.setServices(myServices);
+      mySharedState.setServices(getRunConfigurations());
       updateDashboard(true);
     }
   }
 
-  private @NotNull RunDashboardService doAttachServiceRunContentDescriptor(@NotNull RunnerAndConfigurationSettings settings,
-                                                                           @NotNull RunContentDescriptorId descriptorId) {
+  private @Nullable RunDashboardService doAttachServiceRunContentDescriptor(@NotNull RunnerAndConfigurationSettings settings,
+                                                                            @NotNull RunContentDescriptorId descriptorId) {
     List<RunDashboardService> settingsServices = getServices(settings);
     if (settingsServices == null) {
       RunDashboardServiceImpl newService = new RunDashboardServiceImpl(RunDashboardCoroutineScopeProvider.getInstance(myProject).getCs(),
@@ -598,6 +649,10 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
       settingsServices = new SmartList<>(newService);
       myServices.add(settingsServices);
       return newService;
+    }
+
+    if (ContainerUtil.find(settingsServices, service -> descriptorId.equals(service.getDescriptorId())) != null) {
+      return null;
     }
 
     RunDashboardService service = settingsServices.get(0);
@@ -619,7 +674,7 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
 
   private static boolean areSameOriginDescriptorsBeingExchanged(@NotNull RunContentDescriptorId descriptorId, RunDashboardService service) {
     var existingId = service.getDescriptorId();
-    var resolvedExistingDescriptor = existingId instanceof RunContentDescriptorIdImpl impl ?  findContentValue(impl) : null;
+    var resolvedExistingDescriptor = existingId instanceof RunContentDescriptorIdImpl impl ? findContentValue(impl) : null;
     var resolvedNewDescriptor = descriptorId instanceof RunContentDescriptorIdImpl impl ? findContentValue(impl) : null;
     var areDescriptorsWithSameExecutors =
       resolvedExistingDescriptor != null && resolvedNewDescriptor != null
@@ -1014,7 +1069,8 @@ public final class RunDashboardManagerImpl implements RunDashboardManager, Persi
 
     @Override
     public Content getContent() {
-      return getDescriptor().getAttachedContent();
+      RunContentDescriptor descriptor = getDescriptor();
+      return descriptor == null ? null : descriptor.getAttachedContent();
     }
 
     @Override
