@@ -1,7 +1,11 @@
 package com.intellij.grazie.utils;
 
 import ai.grazie.nlp.langs.Language;
+import com.intellij.codeInspection.InspectionProfile;
+import com.intellij.codeInspection.LocalInspectionTool;
+import com.intellij.codeInspection.ex.InspectionProfileImpl;
 import com.intellij.codeInspection.ex.InspectionProfileWrapper;
+import com.intellij.codeInspection.ex.ToolsImpl;
 import com.intellij.grazie.GrazieConfig;
 import com.intellij.grazie.ide.inspection.grammar.GrazieInspection;
 import com.intellij.grazie.jlanguage.Lang;
@@ -9,10 +13,11 @@ import com.intellij.grazie.text.TextContent;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
+import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.ModificationTracker;
 import com.intellij.openapi.util.TextRange;
-import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.vcs.ui.CommitMessage;
+import com.intellij.profile.codeInspection.InspectionProfileManager;
 import com.intellij.psi.FileViewProvider;
 import com.intellij.psi.PsiFile;
 import com.intellij.psi.util.CachedValueProvider;
@@ -34,19 +39,6 @@ import static com.intellij.grazie.text.TextExtractor.findAllTextContents;
 public final class HighlightingUtil {
 
   public static final Comparator<TextContent> BY_TEXT_START = Comparator.comparing(tc -> tc.textOffsetToFile(0));
-
-  //todo use a more decent API when it appears (https://youtrack.jetbrains.com/issue/IDEA-294972)
-  public static boolean skipExpensivePrecommitAnalysis(PsiFile file) {
-    for (PsiFile root : file.getViewProvider().getAllFiles()) {
-      var function = InspectionProfileWrapper.getCustomInspectionProfileWrapper(root);
-      if (function != null &&
-          function.getClass().getName().contains("com.intellij.codeInsight.daemon.impl.MainPassesRunner") &&
-          Registry.is("grazie.skip.precommit.checks")) {
-        return true;
-      }
-    }
-    return false;
-  }
 
   public static Set<TextContent.TextDomain> checkedDomains() {
     return GrazieInspection.Companion.checkedDomains();
@@ -112,7 +104,31 @@ public final class HighlightingUtil {
   public static List<TextContent> getCheckedFileTexts(FileViewProvider vp) {
     return CachedValuesManager.getManager(vp.getManager().getProject()).getCachedValue(vp, () -> {
       List<TextContent> contents = ContainerUtil.sorted(findAllTextContents(vp, checkedDomains()), BY_TEXT_START);
-      return CachedValueProvider.Result.create(contents, vp.getAllFiles().get(0), grazieConfigTracker());
+      return CachedValueProvider.Result.create(contents, vp.getAllFiles().getFirst(), grazieConfigTracker());
     });
+  }
+
+  public static boolean isLowercase(@NotNull CharSequence content) {
+    return content.chars().allMatch(c -> !Character.isLetter(c) || Character.isLowerCase(c));
+  }
+
+  public static boolean isInspectionEnabled(String shortName, PsiFile file) {
+    InspectionProfileImpl profile = getActiveProfile(file);
+    ToolsImpl tools = profile.getToolsOrNull(shortName, file.getProject());
+    return tools != null && tools.isEnabled(file);
+  }
+
+  public static <T extends LocalInspectionTool> @Nullable T getTool(PsiFile file, String shortName, Class<T> toolClass) {
+    InspectionProfileImpl profile = getActiveProfile(file);
+    ToolsImpl tools = profile.getToolsOrNull(shortName, file.getProject());
+    if (tools == null || !tools.isEnabled(file)) return null;
+    return toolClass.cast(tools.getInspectionTool(file).getTool());
+  }
+
+  private static InspectionProfileImpl getActiveProfile(PsiFile file) {
+    Project project = file.getProject();
+    InspectionProfile profile = InspectionProfileManager.getInstance(project).getCurrentProfile();
+    var customizer = InspectionProfileWrapper.getCustomInspectionProfileWrapper(file);
+    return (InspectionProfileImpl) (customizer != null ? customizer.apply(profile).getInspectionProfile() : profile);
   }
 }
